--- a/app/index.html
+++ b/app/index.html
@@ -1,1 +1,9 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Simple Web Client App</title>
+</head>
+<body>
+ <h2>Hello World! </h2>
+</body>
+</html>
